[package]
name = "ecr-dump"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
aws-config = { version = "1.5.4", features = ["behavior-version-latest"] }
aws-sdk-ecr = "1.37.0"
clap = { version = "4.5.13", features = ["derive"] }
futures-util = "0.3.30"
indicatif = { version = "0.17.8", features = ["tokio"] }
itertools = "0.13.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
tokio = { version = "1.39.2", features = ["full"] }
